tests/invalid_tests/wrong_method_declaration_order.minijava
class WrongOrder {
    void public static main() {
        System.out.println(1);
    }
}
